<resources>
    <string name="cloudy">cloudy</string>
    <string name="app_name">TempText</string>
    <string name="weather_status">Weather</string>
    <string name="current_temp">39°F</string>
    <string name="mostly_cloudy">Mostly Cloudy</string>
    <string name="current_temp2">30º</string>
    <string name="air_quality_image">air quality image</string>
    <string name="rain_cloud_image">rain cloud image</string>
    <string name="pollen_image">pollen image</string>
    <string name="wind">Wind:</string>
    <string name="setup_alerts">SETUP ALERTS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temp_alert">Alert me if temperature is...</string>
    <string name="above">Above:</string>
    <string name="temp_select_low1">70ºF</string>
    <string name="temp_select_moderate1">80ºF</string>
    <string name="temp_select_high1">90ºF</string>
    <string name="temp_select_severe1">100ºF(Severe)</string>
    <string name="below">Below:</string>
    <string name="temp_select_high">40ºF</string>
    <string name="temp_select_moderate">30ºF</string>
    <string name="temp_select_severe">10ºF(Severe)</string>
    <string name="temp_select_low">20ºF</string>
    <string name="save">Save</string>
    <string name="good">Good</string>
    <string name="moderate">Moderate</string>
    <string name="unhealthy_sensitive">Unhealthy for Sensitive Groups</string>
    <string name="unhealthy">Unhealthy</string>
    <string name="very_unhealthy">Very Unhealthy</string>
    <string name="hazardous">Hazardous</string>
    <string name="new_york">New York</string>
    <string name="alerts">Alerts</string>
    <string name="rain">Rain:</string>
    <string name="air_quality">Air quality:</string>
    <string name="degree">°</string>
    <string name="share_location">Share Location</string>
    <string name="no_location_text">No current location</string>
    <string name="launch_activity">Launch Activity</string>
    <string name="preference_file_key">com.example.android.while_in_use_location.PREFERENCE_FILE_KEY</string>
    <string name="permission_rationale">Allow permissions</string>
    <string name="stop_location_updates_button_text">Stop Location Updates</string>
    <string name="channel_name">Alerts</string>
    <string name="channel_description">Current temp is 70. Stay cool!</string>
</resources>