<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/gradient_bg"
tools:context=".ui.SetUpAlertFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/alertAbove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="72dp"
        android:text="@string/temp_alert"
        android:textColor="#FFF9F9"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAbove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/above"
        android:textColor="#F8F2F2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alertAbove" />

    <RadioGroup
        android:id="@+id/radioGroupHigh"
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:text="@string/temp_alert"
        app:layout_constraintBottom_toTopOf="@+id/alertBelow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAbove"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/temp70"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/temp_select_low1"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/temp80"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/temp_select_moderate1"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/temp100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/temp_select_severe1"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />


        <RadioButton
            android:id="@+id/temp90"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/temp_select_high1"
            android:textColor="#FFFDFD"
            android:textSize="16sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/alertBelow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="340dp"
        android:text="@string/temp_alert"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/textViewBelow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:text="@string/below"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alertBelow" />

    <RadioGroup
        android:id="@+id/radioGroupLow"
        android:layout_width="400dp"
        android:layout_height="196dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/savebtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBelow">


        <RadioButton
            android:id="@+id/temp40"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/temp_select_high"
            android:textColor="#F6F1F1"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/temp30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/temp_select_moderate"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/temp20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/temp_select_low"
            android:textColor="#FDFDFD"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/temp10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/temp_select_severe"
            android:textColor="#EFE9E9"
            android:textSize="16sp" />
    </RadioGroup>

    <Button
        android:id="@+id/savebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="172dp"
        android:layout_marginBottom="36dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>